--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^10.0.0",
     "@angular/animations": "~9.0.1",
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
@@ -19,7 +20,10 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.8",
     "rxjs": "~6.5.4",
+    "tassign": "^1.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
